--- a/tests/folia.example
+++ b/tests/folia.example
@@ -41,16 +41,6 @@
   </metadata>
   <text xml:id="WR-P-E-J-0000000001.text">
     <lang class="nl"/>
-    <foreign-data>
-      <fd:node xmlns:fd="foreign">
-	<fd:sub att="1">
-	  test
-	</fd:sub>
-	<fd:sub att="2">
-	  meer
-	</fd:sub>
-      </fd:node>
-    </foreign-data>
     <div xml:id="WR-P-E-J-0000000001.div0.1" class="chapter">
       <head xml:id="WR-P-E-J-0000000001.head.1">
         <s xml:id="WR-P-E-J-0000000001.head.1.s.1">
@@ -82,7 +72,7 @@
             <lemma class="een"/>
           </w>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.1.w.4">
-            <t xmlns:bla="alien" bla:at="scary">ander</t>
+            <t>ander</t>
             <pos class="ADJ(prenom,basis,zonder)"/>
             <lemma class="ander"/>
           </w>
@@ -1123,7 +1113,7 @@
             </w>
           </s>
         </item>
-        <item xml:id="sandbox.list.1.listitem.3" n="3"/>
+        <item xml:id="sandbox.list.1.listitem.3" n="3" xmlns:alien="http://some/foreign/namespace" alien:attrib="folia libraries will ignore alien-namespace attributes. You can use this, but it's recommended to use foreign-data instead"/>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
@@ -1312,5 +1302,15 @@
       Wikipedia® is een geregistreerd handelsmerk van de Wikimedia Foundation, Inc., een organisatie zonder winstoogmerk.
       ]]></content>
     </gap>
+    <foreign-data>
+      <fd:node xmlns:fd="foreign">
+	<fd:sub att="1">
+	  test
+	</fd:sub>
+	<fd:sub att="2">
+	  meer
+	</fd:sub>
+      </fd:node>
+    </foreign-data>
   </text>
 </FoLiA>
