revert back to default g++

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ matrix:
     - os: linux
       compiler: gcc
       addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9']
-      env: COMPILER=g++-4.9
+#        apt:
+#          sources: ['ubuntu-toolchain-r-test']
+#          packages: ['g++-4.9']
+#      env: COMPILER=g++-4.9
+      env: COMPILER=g++
 
 #    - os: linux
 #      compiler: gcc
