--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,8 @@ matrix:
 
     - os: linux
       compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
-          packages: ['clang-3.7']
-      env: COMPILER=clang++-3.7
+      env:
+        - COMPILER=clang++-3.7
 
 
 before_install:
