--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,12 @@ matrix:
 
     - os: linux
       compiler: clang
+      addons:
+        apt:
+          - libiomp-dev
       env:
         - COMPILER=clang++
-
+        - CXXFLAGS="-fopenmp=libiomp5"
 
 before_install:
     - sudo apt-get update
