--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ matrix:
       compiler: clang
       addons:
         apt:
-          - libiomp-dev
+          packages:
+            - libiomp-dev
       env:
         - COMPILER=clang++
         - CXXFLAGS="-fopenmp=libiomp5"
