--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,8 @@ fi
 
 AC_MSG_NOTICE( [pkg-config search path: $PKG_CONFIG_PATH] )
 
+AC_OSX_PKG( [icu4c] )
+
 PKG_CHECK_MODULES([ICU], [icu-uc >= 50 icu-io] )
 CXXFLAGS="$CXXFLAGS $ICU_CFLAGS"
 LIBS="$ICU_LIBS $LIBS"
