--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ group: edge
 branches:
   only:
     - master
+    - foliareader
 
 notifications:
   irc:
@@ -59,6 +60,7 @@ before_install:
     - cd ..
     - git clone https://github.com/LanguageMachines/libfolia
     - cd libfolia
+    - if [ "$TRAVIS_BRANCH" == "foliareader" ]; then git checkout foliareader; fi
     - bash bootstrap.sh
     - ./configure $OPENMPFLAG
     - make
