--- a/.travis.yml
+++ b/.travis.yml
@@ -73,3 +73,6 @@ install:
     - sudo make install
 script:
     - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
+
+after_failure:
+  - cat src/test-suite.log
