--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ group: edge
 branches:
   only:
     - master
-    - foliareader
+    - folia2.0
 
 notifications:
   irc:
@@ -51,6 +51,11 @@ before_install:
         export CXXFLAGS="-I/usr/local/opt/llvm/include";
       fi
 
+    - git clone https://github.com/proycon/foliapy
+    - cd foliapy
+    - git submodule init && git submodule update # get folia-repo with examples
+    - cd ..
+
     - git clone https://github.com/LanguageMachines/ticcutils
     - cd ticcutils
     - bash bootstrap.sh
@@ -72,7 +77,7 @@ install:
     - make
     - sudo make install
 script:
-    - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
+    - FOLIAPATH=../foliapy/folia-repo LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
 
 after_failure:
   - cat src/test-suite.log
