when building folia2.0 tests, we also need the libfolia 2.0 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: xenial
 group: edge
 
 # whitelist
@@ -65,7 +65,7 @@ before_install:
     - cd ..
     - git clone https://github.com/LanguageMachines/libfolia
     - cd libfolia
-    - if [ "$TRAVIS_BRANCH" == "foliareader" ]; then git checkout foliareader; fi
+    - if [ "$TRAVIS_BRANCH" == "folia2.0" ]; then git checkout folia2.0; fi
     - bash bootstrap.sh
     - ./configure $OPENMPFLAG
     - make
