--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,10 @@ before_install:
         sudo apt-get install pkg-config autoconf-archive libicu-dev libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff libboost-dev libboost-regex-dev;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        brew update;
+#        brew update;
         brew install pkg-config;
         brew install autoconf-archive;
-        brew xmldiff || brew upgrade xmldiff;
+        brew install xmldiff;
         brew outdated || brew upgrade icu4c;
         brew outdated || brew upgrade libxml2;
         brew outdated || brew install bzip2;
