--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---   # foliatest
 sudo: required
 dist: trusty
 group: edge
@@ -13,7 +14,8 @@ notifications:
     channels:
       - "irc.uvt.nl#gitlama"
     template:
-      - "%{repository_slug}#%{build_number}-%{branch} : %{message} --> %{build_url}"
+      - "%{repository_slug}#%{build_number}-%{branch} : %{message}
+        --> %{build_url}"
     skip_join: true
 
 language: cpp
@@ -31,54 +33,57 @@ matrix:
       compiler: clang
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        sudo apt-get update;
-        sudo apt-get install pkg-config autoconf-archive libicu-dev libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff libboost-dev libboost-regex-dev;
-      fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-#        brew update;
-        brew install pkg-config;
-        brew install autoconf-archive;
-        brew install xmldiff;
-        brew outdated || brew upgrade icu4c;
-        brew outdated || brew upgrade libxml2;
-        brew outdated || brew install bzip2;
-        brew outdated || brew install zlib;
-        brew install libtar;
-        brew outdated boost || brew upgrade boost;
-        brew install llvm;
-        export PATH="/usr/local/opt/llvm/bin:$PATH";
-        export LDFLAGS="-L/usr/local/opt/llvm/lib";
-        export CXXFLAGS="-I/usr/local/opt/llvm/include";
-      fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      sudo apt-get update;
+      sudo apt-get install pkg-config autoconf-archive libicu-dev
+           libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff libboost-dev
+           libboost-regex-dev;
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      brew install pkg-config;
+      brew install autoconf-archive;
+      brew install xmldiff;
+      brew outdated || brew upgrade icu4c;
+      brew outdated || brew upgrade libxml2;
+      brew outdated || brew install bzip2;
+      brew outdated || brew install zlib;
+      brew install libtar;
+      brew outdated boost || brew upgrade boost;
+      brew install llvm;
+      export PATH="/usr/local/opt/llvm/bin:$PATH";
+      export LDFLAGS="-L/usr/local/opt/llvm/lib";
+      export CXXFLAGS="-I/usr/local/opt/llvm/include";
+    fi
 
-    - git clone https://github.com/proycon/foliapy
-    - cd foliapy
-    - git submodule init && git submodule update # get folia-repo with examples
-    - cd ..
+  - git clone https://github.com/proycon/foliapy
+  - cd foliapy
+  - git submodule init && git submodule update   # get folia-repo with examples
+  - cd ..
 
-    - git clone https://github.com/LanguageMachines/ticcutils
-    - cd ticcutils
-    - bash bootstrap.sh
-    - ./configure $OPENMPFLAG
-    - make
-    - sudo make install
-    - cd ..
-    - git clone https://github.com/LanguageMachines/libfolia
-    - cd libfolia
-    - if [ "$TRAVIS_BRANCH" == "folia2.0" ]; then git checkout folia2.0; fi
-    - bash bootstrap.sh
-    - ./configure $OPENMPFLAG
-    - make
-    - sudo make install
-    - cd ..
+  - git clone https://github.com/LanguageMachines/ticcutils
+  - cd ticcutils
+  - bash bootstrap.sh
+  - ./configure $OPENMPFLAG
+  - make
+  - sudo make install
+  - cd ..
+  - git clone https://github.com/LanguageMachines/libfolia
+  - cd libfolia
+  - if [ "$TRAVIS_BRANCH" == "folia2.0" ]; then git checkout folia2.0; fi
+  - bash bootstrap.sh
+  - ./configure $OPENMPFLAG
+  - make
+  - sudo make install
+  - cd ..
 install:
-    - bash bootstrap.sh
-    - ./configure $OPENMPFLAG
-    - make
-    - sudo make install
+  - bash bootstrap.sh
+  - ./configure $OPENMPFLAG
+  - make
+  - sudo make install
 script:
-    - FOLIAPATH=foliapy/folia-repo LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
+  - FOLIAPATH=foliapy/folia-repo
+    LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
+    make check
 
 after_failure:
   - cat src/test-suite.log
