--- a/.travis.yml
+++ b/.travis.yml
@@ -36,13 +36,12 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update;
       sudo apt-get install pkg-config autoconf-archive libicu-dev
-           libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff libboost-dev
+           libxml2-dev libtar-dev libbz2-dev zlib1g-dev libboost-dev
            libboost-regex-dev;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew install pkg-config;
       brew install autoconf-archive;
-      brew install xmldiff;
       brew outdated || brew upgrade icu4c;
       brew outdated || brew upgrade libxml2;
       brew outdated || brew install bzip2;
