--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ---   # foliatest
 sudo: required
-dist: trusty
+dist: bionic
 group: edge
 
 # whitelist
@@ -25,8 +25,6 @@ matrix:
 
     - os: linux
       compiler: clang++
-      env:
-        - OPENMPFLAG=--disable-openmp
 
     - os: osx
       compiler: clang
@@ -35,8 +33,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update;
       sudo apt-get install pkg-config autoconf-archive libicu-dev
-           libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff libboost-dev
-           libboost-regex-dev;
+           libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew install pkg-config;
@@ -47,7 +44,6 @@ before_install:
       brew outdated || brew install bzip2;
       brew outdated || brew install zlib;
       brew install libtar;
-      brew outdated boost || brew upgrade boost;
       brew install llvm;
       export PATH="/usr/local/opt/llvm/bin:$PATH";
       export LDFLAGS="-L/usr/local/opt/llvm/lib";
