--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update;
-      sudo apt-get install pkg-config autoconf-archive libicu-dev
+      sudo apt-get install pkg-config autoconf-archive libicu-dev cppcheck
            libxml2-dev libtar-dev libbz2-dev zlib1g-dev xmldiff;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -53,6 +53,7 @@ before_install:
       brew outdated || brew upgrade libxml2;
       brew outdated || brew install bzip2;
       brew outdated || brew install zlib;
+      brew install cppcheck;
       brew install libtar;
       brew install llvm;
       export PATH="/usr/local/opt/llvm/bin:$PATH";
@@ -85,6 +86,7 @@ install:
   - ./configure $OPENMPFLAG
   - cppcheck --enable=all --quiet --error-exitcode=0 .
   - $SCAN --status-bugs make
+  - make
   - sudo make install
 script:
   - FOLIAPATH=foliapy/folia-repo
