--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ install:
   - sudo make install
 script:
   - FOLIAPATH=foliapy/folia-repo
+    EXPECT=4
     LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
     make check
 
