--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,10 @@ before_install:
       brew outdated || brew install zlib;
       brew install cppcheck;
       brew install libtar;
-      brew install llvm;
-      export PATH="/usr/local/opt/llvm/bin:$PATH";
-      export LDFLAGS="-L/usr/local/opt/llvm/lib";
-      export CXXFLAGS="-I/usr/local/opt/llvm/include";
+#      brew install llvm;
+#      export PATH="/usr/local/opt/llvm/bin:$PATH";
+#      export LDFLAGS="-L/usr/local/opt/llvm/lib";
+#      export CXXFLAGS="-I/usr/local/opt/llvm/include";
     fi
 
   - git clone https://github.com/proycon/foliapy
