--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
         - OPENMPFLAG=--disable-openmp
 
     - os: osx
+      osx_image: xcode11
       cache: ccache
       compiler: clang
       env:
