--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -98,6 +98,8 @@ jobs:
           CXX:  ${{ matrix.compiler }}
         run: LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
         continue-on-error: true
+      - name: show log
+        run: cat src/test-suite.log
 
       - name: Notify IRC of failure
         if: ${{ failure() }}
