--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -105,7 +105,7 @@ jobs:
       - name: check
         env:
           CXX: ${{ matrix.compiler }}
-        run: LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
+        run: FOLIAPATH=foliapy/folia-repo EXPECT=0 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
         continue-on-error: true
       - name: show log
         run: cat src/test-suite.log
