attempt for cleaner action code

--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -105,7 +105,11 @@ jobs:
       - name: check
         env:
           CXX: ${{ matrix.compiler }}
-        run: FOLIAPATH=foliapy/folia-repo EXPECT=0 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib make check
+        run: make check
+	env:
+          FOLIAPATH: foliapy/folia-repo
+          EXPECT: 0
+	  LD_LIBRARY_PATH: $LD_LIBRARY_PATH:/usr/local/lib
         continue-on-error: true
       - name: show log
         run: cat src/test-suite.log
