--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   notification:
     runs-on: ubuntu-latest
-    name: Notify start to ##gitlama
+    name: Notify start to '#gitlama'
     steps:
       - name: IRC notification
         uses: Gottox/irc-message-action@v1
