hmm, debugging then

--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -98,6 +98,8 @@ jobs:
         env:
           CXX: ${{ matrix.compiler }}
         run: ./configure
+      - name: show config
+        run: cat config.log
       - name: make
         run: make
       - name: install
