--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -103,8 +103,10 @@ jobs:
         run: |
           id=$(echo ${{matrix.compiler}} | cut -d\+ -f1)
           echo "::set-output name=id::$id"
-#      - name: show config
-#        run: cat config.log
+      - name: show config.log
+        run: cat config.log
+      - name: show config.h
+        run: cat config.h
       - name: Static Code-check
         run: cppcheck --enable=all --quiet --error-exitcode=0 .
       - name: make
