add a parameter to CppCheck. should remove some false warnings

--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -108,7 +108,7 @@ jobs:
       - name: show config.h
         run: cat config.h
       - name: Static Code-check
-        run: cppcheck --enable=all --quiet --error-exitcode=0 .
+        run: cppcheck --enable=all --quiet --error-exitcode=0 -I . .
       - name: make
         run: make
       - name: install
