--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -36,6 +36,11 @@ jobs:
         compiler: [g++, clang++]
 
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          access_token: ${{ github.token }}
+
       - uses: actions/checkout@v2
       - name: Install Build Environment
         run: |
@@ -113,19 +118,8 @@ jobs:
         run: make
       - name: install
         run: sudo make install
-      - name: check
-        run: make check
-        env:
-          CXX: ${{ matrix.compiler }}
-          FOLIAPATH: foliapy/folia-repo
-          EXPECT: 0
-          LD_LIBRARY_PATH: $LD_LIBRARY_PATH:/usr/local/lib
-        continue-on-error: true
 
-      - name: show log
-        run: cat src/test-suite.log
-
-      - name: foliatest action
+      - name: running foliatests
         run: |
           ./src/testaction.sh;
           TEST_STAT=$(cat status.tmp)
@@ -133,7 +127,7 @@ jobs:
         continue-on-error: true
 
       - name: Notify IRC of failure
-        if: ${{ failure() }}
+        if: ${{ env.test_status != '0' }}
         uses: Gottox/irc-message-action@v1
         with:
           server: irc.uvt.nl
@@ -143,7 +137,7 @@ jobs:
             foliatest: with ${{ matrix.compiler }} build by ${{ github.actor }} on ${{ matrix.os }}: FAILED
 
       - name: Notify IRC of succes
-        if: ${{ success() }}
+        if: ${{ env.test_status == '0' }}
         uses: Gottox/irc-message-action@v1
         with:
           server: irc.uvt.nl
