--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -121,7 +121,7 @@ jobs:
 
       - name: running foliatests
         env:
-          FOLIA_PATH: foliapy/folia-repo
+          FOLIAPATH: foliapy/folia-repo
           EXPECT: 0
           LD_LIBRARY_PATH: $LD_LIBRARY_PATH:/usr/local/lib
         run: |
