--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -49,8 +49,6 @@ jobs:
           access_token: ${{ github.token }}
 
       - uses: actions/checkout@v4.1.1
-        with:
-          submodules: recursive
 
       - name: Install Build Environment
         run: |
@@ -74,6 +72,14 @@ jobs:
                 brew install zlib
                 brew install cppcheck
              fi
+
+      - name: install FoliaPY
+        run: |
+          git clone https://github.com/proycon/foliapy;
+          cd foliapy;
+          # get folia-repo with examples
+          git submodule init && git submodule update;
+          cd ..
 
       - name: install TiccUtils
         env:
