--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -39,7 +39,7 @@ jobs:
     needs: notification
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13]
+        os: [ubuntu-latest, macos-14]
         compiler: [g++, clang++]
 
     steps:
@@ -56,10 +56,11 @@ jobs:
                 sudo apt-get install pkg-config autoconf-archive
              else
                 brew upgrade;
-                brew install pkg-config;
-                brew install autoconf-archive;
-                brew install autoconf;
-                brew install automake;
+                brew install pkg-config
+                brew install libtool
+                brew install autoconf-archive
+                brew install autoconf
+                brew install automake
              fi
       - name: Install Dependencies
         run: |
