--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -52,6 +52,7 @@ jobs:
       - uses: LanguageMachines/ticcactions/cpp-submodule-build@v1
         with:
           module: libfolia
+          branch: ${{ github.ref_name }}
 
       - name: Static Code-check
         if: ${{ env.action_status == '' }}
