--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -47,11 +47,13 @@ jobs:
 
       - uses: LanguageMachines/ticcactions/cpp-submodule-build@v1
         with:
+          branch: ${{ github.ref_name }}
           module: ticcutils
 
       - uses: LanguageMachines/ticcactions/cpp-submodule-build@v1
         with:
           module: libfolia
+          branch: ${{ github.ref_name }}
 
       - name: Static Code-check
         if: ${{ env.action_status == '' }}
