--- a/.github/workflows/foliatest.yml
+++ b/.github/workflows/foliatest.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        compiler: [g++-12, clang++-16]
+        compiler: [g++-12, clang++]
 
     steps:
       - uses: actions/checkout@v4.1.1
